# copilot-session-sync

./: README.md  pyproject.toml
plans/: plan.md
src/copilot_session_sync/: __init__.py  cli.py  parser.py  scanner.py  store.py  vscode.py
tests/: test_parser.py  test_store.py  test_vscode.py
